[package]
name = "picpack"
version = "0.1.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/picpack"
# image 0.25.0 rasises MSRV to 1.67.1
rust-version = "1.67.1"
description = "Web image tooling"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
# strip = true
opt-level = "z"

[dependencies]
base64 = "0.22.0"
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp", "hdr", "dds"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
thumbhash = "0.1.0"
wasm-bindgen = { version = "=0.2.95", features = ["serde-serialize"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "const_xxh3"] }
